tests/data/bad/bad_schema.py
from ntc import CN

from ..good.good import cfg

cfg = CN(cfg)
cfg.DICT.Y = CN()
